지시어 처리 기능 추가 및 오류 수집기 개선
- `AST.h`에 `Directive` 구조체 추가
- `directive.cpp` 및 `directive.h` 파일 생성
- `Spliter5.vcxproj`에 새로운 파일 포함
- `ErrorCollector` 클래스에 외부 오류 설정 및 추가 메서드 구현
- `Error` 구조체에 외부 파일 이름 멤버 추가
- `parser.cpp`에서 `BlockType::directive` 처리 로직 추가
- `SyntaxChecker` 클래스에 `DirectiveChecker` 메서드 추가

--- a/Spliter5/Spliter5.vcxproj
+++ b/Spliter5/Spliter5.vcxproj
@@ -124,6 +124,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="directive.cpp" />
     <ClCompile Include="error.cpp" />
     <ClCompile Include="file.cpp" />
     <ClCompile Include="function.cpp" />
@@ -134,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AST.h" />
+    <ClInclude Include="directive.h" />
     <ClInclude Include="error.h" />
     <ClInclude Include="file.h" />
     <ClInclude Include="function.h" />
