--- a/Spliter5/Spliter5.vcxproj.filters
+++ b/Spliter5/Spliter5.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="file.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="directive.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="read.h">
@@ -57,6 +60,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="file.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="directive.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
